# employee-management-system

./: Admin.cpp  Admin.h  CMakeLists.txt  Magazynier.cpp  Magazynier.h  Manager_plikow.cpp  Manager_plikow.h  Opis.txt  Praktykant.cpp  Praktykant.h  Programowalna.cpp  Programowalna.h  README.md  SerialPort.cpp  SerialPort.h  Tryb_awaryjny.cpp  Tryb_awaryjny.h  Zegar.cpp  Zegar.h  main.cpp  pracownicy.json  user.cpp  user.h
